# flext-dbt-oracle

./: .gitignore  CLAUDE.md  Makefile  README.md  __init__.py  base.mk  pyproject.toml  rules.json
docs/: README.md  index.md
docs/api-reference/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
examples/: README.md
scripts/: README.md
scripts/core/: skill_validate.py
scripts/dependencies/: modernize_pyproject.py  sync_extra_paths_from_deps.py
src/: __init__.py
src/dbt/: __init__.py
src/dbt/adapters/: __init__.py
src/dbt/adapters/oracle/: __init__.py  config.py  connections.py  constants.py  impl.py  typedefs.py
src/flext_dbt_oracle/: __init__.py  __version__.py  _models.py  adapters.py  adapters_init.py  base.py  client.py  config.py  connections.py  constants.py  dbt_client.py  dbt_config.py  dbt_exceptions.py  dbt_models.py  dbt_services.py  exceptions.py  impl.py  models.py  protocols.py  services.py  settings.py  simple_api.py  types.py  typings.py  utilities.py  version.py
src/flext_dbt_oracle/_utilities/: __init__.py  connections.py  simple_api.py
src/flext_dbt_oracle/adapters/: __init__.py
src/flext_dbt_oracle/adapters/oracle/: __init__.py  config.py  connections.py  constants.py  impl.py  rules.json  typedefs.py  types.py
src/flext_dbt_oracle/infrastructure/: di_container.py
tests/: __init__.py  _models.py  conftest.py  conftest_project.py  constants.py  models.py  protocols.py  test_basic.py  test_config.py  test_config_advanced.py  test_connections.py  test_connections_advanced.py  test_impl.py  test_impl_advanced.py  test_imports.py  test_module_governance.py  typings.py  utilities.py
tests/fixtures/: __init__.py
tests/unit/: __init__.py  test_basic.py  test_config.py  test_connections.py  test_impl.py  test_imports.py  test_module_governance.py
typings/flext_dbt_oracle/: __init__.pyi  constants.pyi  dbt_client.pyi  dbt_config.pyi  dbt_exceptions.pyi  dbt_models.pyi  dbt_services.pyi  models.pyi
typings/tests/: conftest.pyi  test_basic.pyi  test_config_advanced.pyi  test_connections_advanced.pyi  test_impl_advanced.pyi  test_imports.pyi
