[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Database",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "agate>=1.7",
        "dbt-common>=1.27.0",
        "pydantic (>=2.12.3)",
        "pydantic-core (>=2.41.4)",
    ]
    description = "FLEXT dbt Oracle - dbt Models for Oracle Database"
    keywords = [
        "data-transformation",
        "dbt",
        "enterprise",
        "flext",
        "sql",
        "typed",
    ]
    name = "flext-dbt-oracle"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.10.0-dev"

    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

    [project.scripts]
        flext-dbt-oracle = "flext_dbt_oracle.cli:main"

[tool]
    [tool.deptry]
        known_first_party = [
            "flext_dbt_oracle",
            "flext_core",
            "flext_db_oracle",
            "flext_meltano",
        ]
        pep621_dev_dependency_groups = [
            "dev",
            "test",
            "typings",
            "security",
        ]

    [tool.deptry.per_rule_ignores]
        DEP002 = [
            # CLI tools (invoked from command line, not imported)
            "autoflake",
            "bandit",
            "black",
            "codespell",
            "commitizen",
            "detect-secrets",
            "isort",
            "pip-audit",
            "pre-commit",
            "pylint",
            "pyrefly",
            "pyupgrade",
            "radon",
            "ruff",
            "vulture",
            # Type stubs
            "types-psutil",
            "types-python-dateutil",
            "types-pyyaml",
            "types-redis",
            "types-requests",
            "types-setuptools",
            "types-toml",
            # Runtime deps used indirectly (via dbt, pydantic)
            "agate",
            "dbt-common",
            "faker",
            "pydantic-core",
            "pytest",
            "pytest-cov",
        ]

    [tool.poetry]
        [[tool.poetry.packages]]
            from    = "src"
            include = "flext_dbt_oracle"

        [tool.poetry.dependencies]
            python = ">=3.13,<3.14"

            [tool.poetry.dependencies.flext-core]
                develop = true
                path    = "../flext-core"

            [tool.poetry.dependencies.flext-db-oracle]
                develop = true
                path = "../flext-db-oracle"

            [tool.poetry.dependencies.flext-meltano]
                develop = true
                path = "../flext-meltano"

            [tool.poetry.group]
            [tool.poetry.group.dev.dependencies]
                autoflake      = ">=2.3.1"
                black          = ">=25.1.0"
                codespell      = ">=2.3.0"
                commitizen     = ">=4.8.3"
                detect-secrets = ">=1.5.0"
                isort          = ">=6.0.1"
                pre-commit     = ">=4.0.1"
                pylint         = ">=3.3.0"
                pyrefly        = "^0.46.3"
                pyupgrade      = ">=3.19.0"
                radon          = ">=6.0.1"
                ruff           = ">=0.12.3"
                vulture        = ">=2.13"
            pytest-cov = "^7.0.0"
            pytest = "^9.0.2"
            opentelemetry-api = ">=1.39.1"
            opentelemetry-sdk = ">=1.39.1"
            prompt-toolkit = ">=3.0.52"
            sqlparse = ">=0.5.5"

            [tool.poetry.group.test.dependencies]
                
        
factory-boy         = ">=3.3.1"
                faker               = ">=37.4.0"
                hypothesis          = ">=6.125.0"
                pytest              = ">=8.4.0"
                pytest-benchmark    = ">=5.1.0"
                pytest-clarity      = ">=1.0.1"
                pytest-cov = ">=7.0.0"
                pytest-deadfixtures = ">=2.2.1"
                pytest-env          = ">=1.1.5"
                pytest-mock         = ">=3.14.0"
                pytest-sugar        = ">=1.0.0"
                pytest-timeout      = ">=2.4.0"
                pytest-xdist        = ">=3.8.0"

            [tool.poetry.group.typings.dependencies]
                types-psutil          = ">=7.0.0"
                types-python-dateutil = ">=2.9.0"
                types-pyyaml          = ">=6.0.12"
                types-redis           = ">=4.6.0"
                types-requests        = ">=2.32.4"
                types-setuptools      = ">=80.9.0"
                types-toml            = ">=0.10.8.20240310"

    [tool.pytest.ini_options]
        addopts = [
            "--cov-report=term-missing",
            "--cov=src/",
            "--strict-config",
            "--strict-markers",
            "--tb=short",
            "-p no:sugar",
            "-q",
            "-ra",
        ]
        markers = [
            "e2e: End-to-end tests",
            "integration: Integration tests",
            "slow: Slow tests",
            "smoke: Smoke tests",
            "unit: Unit tests",
        ]
        minversion = "8.0"
        python_classes = [
            "Test*",
        ]
        python_files = [
            "*_test.py",
            "test_*.py",
        ]
        python_functions = [
            "test_*",
        ]
        testpaths = [
            "tests",
        ]

    [tool.pyrefly]
        search-path = [
            "src",
            "tests",
            "examples",
            "scripts",
        ]

    [tool.ruff]
        extend = "../ruff-shared.toml"

        [tool.ruff.lint.isort]
            known-first-party = [
                "flext_dbt_oracle",
            ]
